[gd_scene load_steps=4 format=3 uid="uid://b3gg0nmjq7om5"]

[ext_resource type="Script" path="res://Scenes/UI_Elements/settings_comp/slider_setting.gd" id="1_wox52"]
[ext_resource type="Theme" uid="uid://dtqfsbjdbbwas" path="res://UI_Theme/Brimblo.tres" id="3_6pt8k"]
[ext_resource type="AudioStream" uid="uid://c5fw4tvlujmfy" path="res://Assets/SFX/UI/zapsplat_multimedia_game_sound_glass_clink_003_72372.mp3" id="4_b6qyg"]

[node name="Slider" type="HBoxContainer"]
offset_right = 894.0
offset_bottom = 98.0
size_flags_vertical = 3
theme = ExtResource("3_6pt8k")
theme_override_constants/separation = 0
script = ExtResource("1_wox52")

[node name="SettingName" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Auto Glow Mode "
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
value = 50.0

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b6qyg")
volume_db = -12.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="focus_entered" from="HSlider" to="." method="_on_h_slider_focus_entered"]
[connection signal="focus_exited" from="HSlider" to="." method="_on_h_slider_focus_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
